fixed image sizing and spacing

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -23,7 +23,7 @@ body {
   background: $white;
   margin: auto;
   margin-bottom: $big-spacing;
-  width: 70vw;
+  width: 80vw;
   padding: $base-spacing 0;
 
   &.no-pad {
@@ -42,7 +42,7 @@ body {
 .tab-menu {
   border-bottom: 3px solid #a6afbe;
   display: flex;
-  width: 70vw;
+  width: 80vw;
   margin-bottom: $small-spacing;
   margin-top: $big-spacing;
 
